--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
+.grid-container {display: grid;
+grid-template-columns: 1fr 1fr;
+grid-gap: 10px;}
 
+.nav-item {padding-top: 40px;}
 
+.text-center {padding-top: 30px;}
 
-  
-  
+.theProcess {padding-top: 30px;}
+
+.userResearch {padding: 40px;}
+
+.userResearch p {padding: 20px;}
+
+.matrixWords p {padding-top: 30px;
+font-size: larger;
+font-weight:bold;}
+
+.problemStatement {padding-top: 60px;
+padding-bottom: 30px;}
+
+.Ideation {padding-top: 50px;}
+
+.usabilityTest {padding-top: 50px;}
+
+.Prototyping {padding-top: 50px;}
